--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,9 @@
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <!--
     <a class="site-title" href="https://www.uplandr.com">Uplandr</a>
-
+    -->
 
     {%- if titles_size > 0 -%}
       <nav class="site-nav">
@@ -23,7 +24,10 @@
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
+            <a class="site-title" href="https://www.uplandr.com">Uplandr</a>
+            <!--
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+            -->
             {%- endif -%}
           {%- endfor -%}
         </div>
